[update]jankins, igdb config

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,3 +13,13 @@ services:
       POSTGRES_USER: gyuha
       POSTGRES_PASSWORD: rbgksla
       POSTGRES_DB: trailed
+  jenkins:
+    image: jenkins/jenkins:lts
+    container_name: jenkins
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - /jenkins:/var/jenkins_home
+    ports:
+      - '8080:8080'
+    privileged: true
+    user: root
